--- a/provision/dashboard/public/css/main.css
+++ b/provision/dashboard/public/css/main.css
@@ -1,10 +1,15 @@
 html, body {
     margin: 0;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    line-height: 18px;
 }
 
 #header {
     background: #333;
     color: white;
+    margin: 0;
+    padding: 15px;
 }
 
 #header #title:before {
@@ -13,10 +18,30 @@ html, body {
 
 #header #nav {
     list-style-type: none;
-    margin: 0;
+    margin: 0 0 0 30px;
     padding: 0;
+    display: inline-block;
 }
 
 #header #nav li {
     display: inline-block;
+    margin-left: 10px;
+}
+
+#header #nav li:first-child {
+    margin-left: 0;
+}
+
+#header #nav li a {
+    color: #EEE;
+    text-decoration: none;
+}
+
+#header #nav li a:hover,
+#header #nav li.active a {
+    color: white;
+}
+
+#header #nav li.active a {
+    text-decoration: underline;
 }
