--- a/provision/dashboard/public/css/main.css
+++ b/provision/dashboard/public/css/main.css
@@ -12,6 +12,11 @@ html, body {
     padding: 15px;
 }
 
+#header a {
+    text-decoration: none;
+    color: white;
+}
+
 #header #title:before {
     content: attr(title);
 }
@@ -34,7 +39,6 @@ html, body {
 
 #header #nav li a {
     color: #EEE;
-    text-decoration: none;
 }
 
 #header #nav li a:hover,
