--- a/provision/dashboard/public/css/scores.css
+++ b/provision/dashboard/public/css/scores.css
@@ -4,6 +4,10 @@ th {
     width: 170px;
 }
 
-th.scores {
+tr:first-child th {
     text-align: center;
+}
+
+a.kia {
+    text-decoration: line-through;
 }
